CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)

PROJECT(gnupgpp)

SET(CMAKE_BUILD_TYPE Debug)

SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")

SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Krzysztof Borowczyk")
SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)

SET(CMAKE_CXX_STANDARD 14)

#FIND_PACKAGE(Gpgme)
#INCLUDE_DIRECTORIES(${GPGME_INCLUDES})

INCLUDE_DIRECTORIES(.)

SET(SOURCES

  )

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
#  ${GPGME_VANILLA_LIBRARIES}
  )

install(TARGETS ${PROJECT_NAME} DESTINATION lib)

include(CPack)

